Add images of mock airlines, restructure readme files.